# Sem6

./: .gitignore  README.md  chainlit.md  pyproject.toml  run_dev.ps1
.chainlit/: config.toml
docs/: triage_agent_implementation.md
docs/verantwoording/: llm-verantwoording.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  router.tsx
frontend/src/components/: ChatInterface.tsx
frontend/src/components/cesium/: CharacterBubble.tsx  RotterdamViewer.tsx
frontend/src/components/map/: CharacterMapBubble.tsx
frontend/src/pages/: ErrorPage.tsx  HistoricalMapPage.tsx  PietHeinPage.tsx  RotterdamDashboardPage.tsx  WitteDeWithPage.tsx
src/: main.py
src/agents/: chatbot.py  triage.py
src/core/: llm.py  prompts.py
src/personas/: __init__.py  base.py
src/personas/persona_template/: agent.py  avatar.json  system_prompt.md
src/personas/piet_hein/: avatar.json  predefined.json  system_prompt.md
src/personas/witte_de_with/: agent.py  avatar.json  predefined.json  system_prompt.md
src/web/: ag_ui_server.py  app.py
src_backup/: main.py
src_backup/agents/: chatbot.py
src_backup/core/: llm.py  prompts.py
src_backup/web/: app.py
